--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <meta name="description" content="খাঁটি খবর" />
-    <title>খাঁটি খবর</title>
+    <meta name="description" content="News Checking" />
+    <title>News Checking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
